fix: text hidden on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -934,7 +934,7 @@ body {
     }
 
     .hero-content {
-        padding: 5rem 1rem 2rem 1rem;
+        padding: 8rem 1rem 2rem 1rem;
         /* Adjusted for smaller screens */
         gap: 2rem;
     }
